tree-sitter-quilt/test/corpus/glyphs.txt
================================================================================
Escape every glyph
================================================================================
a\↖b\↗c\↙d\↘e\↑f\↓g\←h\⟨i\⟩j
--------------------------------------------------------------------------------

(source_file
  (content)
  (escape)
  (content)
  (escape)
  (content)
  (escape)
  (content)
  (escape)
  (content)
  (escape)
  (content)
  (escape)
  (content)
  (escape)
  (content)
  (escape)
  (content)
  (escape)
  (content))

================================================================================
Escaped emit is not an emit
================================================================================
def m : IO Unit := do
  let x \← IO.getStdout
  pure ()
--------------------------------------------------------------------------------

(source_file
  (content)
  (newline)
  (content)
  (escape)
  (content)
  (newline)
  (content))

================================================================================
ASCII bind passes through untouched
================================================================================
let x <- IO.getStdout
--------------------------------------------------------------------------------

(source_file
  (content))

================================================================================
Backslash before a non-glyph stays content
================================================================================
a\nb\tc\dd\"e
--------------------------------------------------------------------------------

(source_file
  (content))

================================================================================
Escaped backslash then glyph
================================================================================
a\\↖b↗
--------------------------------------------------------------------------------

(source_file
  (content)
  (quote
    (left_quote)
    (content)
    (right_quote)))

================================================================================
Lift operator
================================================================================
↙x.↑↘
--------------------------------------------------------------------------------

(source_file
  (unquote
    (left_unquote)
    (content)
    (lift)
    (right_unquote)))

================================================================================
Emit operator
================================================================================
↖a↗.←
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (content)
    (right_quote))
  (content)
  (emit))

================================================================================
Reduce operator
================================================================================
↓↖1 + 2↗
--------------------------------------------------------------------------------

(source_file
  (reduce)
  (quote
    (left_quote)
    (content)
    (right_quote)))

================================================================================
Annotated reduce
================================================================================
py↓↖1 + 2↗
--------------------------------------------------------------------------------

(source_file
  (reduce)
  (quote
    (left_quote)
    (content)
    (right_quote)))

================================================================================
Glyph at start and end of file
================================================================================
↖a↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (content)
    (right_quote)))

================================================================================
Type and name in context
================================================================================
fn mk() -> Result<⟨T⟩> { ⟨N⟩ }
--------------------------------------------------------------------------------

(source_file
  (content)
  (type)
  (content)
  (name)
  (content))
