tree-sitter-quilt/test/corpus/nesting.txt
================================================================================
Unquote inside a quote
================================================================================
↖a ↙b↘ c↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (content)
    (unquote
      (left_unquote)
      (content)
      (right_unquote))
    (content)
    (right_quote)))

================================================================================
Named unquote
================================================================================
↖a py↙b↘ c↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (content)
    (unquote
      (left_unquote)
      (content)
      (right_unquote))
    (content)
    (right_quote)))

================================================================================
Bare unquote at top level
================================================================================
↙x↘
--------------------------------------------------------------------------------

(source_file
  (unquote
    (left_unquote)
    (content)
    (right_unquote)))

================================================================================
Quote nested in a quote
================================================================================
↖a ↖b↗ c↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (content)
    (quote
      (left_quote)
      (content)
      (right_quote))
    (content)
    (right_quote)))

================================================================================
Nesting depth three
================================================================================
↖a ↖b ↖c↗ d↗ e↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (content)
    (quote
      (left_quote)
      (content)
      (quote
        (left_quote)
        (content)
        (right_quote))
      (content)
      (right_quote))
    (content)
    (right_quote)))

================================================================================
Unquote nested in an unquote
================================================================================
↖a ↙b ↖c ↙d↘↗↘ e↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (content)
    (unquote
      (left_unquote)
      (content)
      (quote
        (left_quote)
        (content)
        (unquote
          (left_unquote)
          (content)
          (right_unquote))
        (right_quote))
      (right_unquote))
    (content)
    (right_quote)))

================================================================================
Empty quote
================================================================================
↖↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (right_quote)))

================================================================================
Empty unquote inside a quote
================================================================================
↖↙↘↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (unquote
      (left_unquote)
      (right_unquote))
    (right_quote)))

================================================================================
Adjacent quotes
================================================================================
↖a↗↖b↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (content)
    (right_quote))
  (quote
    (left_quote)
    (content)
    (right_quote)))

================================================================================
Multiline quote
================================================================================
↖
def foo():
    pass
↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (newline)
    (content)
    (newline)
    (content)
    (newline)
    (right_quote)))

================================================================================
Both annotations on one line
================================================================================
py↖a wgsl↖b↗ rs↙c↘ d↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (content)
    (quote
      (left_quote)
      (content)
      (right_quote))
    (content)
    (unquote
      (left_unquote)
      (content)
      (right_unquote))
    (content)
    (right_quote)))
