tree-sitter-quilt/test/corpus/test.txt
================================================================================
Escape
================================================================================
abc\↖def\↗ghi
--------------------------------------------------------------------------------

(source_file
  (content)
  (escape)
  (content)
  (escape)
  (content)
)

================================================================================
Escape Escape
================================================================================
abc\\↖def\\↗ghi
--------------------------------------------------------------------------------

(source_file
  (content)
  (quote
    (left_quote)
    (content)
    (right_quote))
  (content)
)

================================================================================
Named Quote
================================================================================
1py↖1↗
--------------------------------------------------------------------------------

(source_file
  (content)
  (quote
    (left_quote)
    (content)
    (right_quote))
)

================================================================================
Empty
================================================================================
--------------------------------------------------------------------------------

(source_file
)

================================================================================
Symbols
================================================================================
⟨T⟩⟨N⟩\⟨N\⟩
--------------------------------------------------------------------------------

(source_file
  (type)
  (name)
  (escape)
  (content)
  (escape)
)

================================================================================
Line Comments
================================================================================
⟨//⟩ comment ↖
1 + 2
⟨//⟩ comment
--------------------------------------------------------------------------------

(source_file
  (newline)
  (content)
)

================================================================================
Block Comments
================================================================================
⟨/*⟩ comment ↖ ⟨ */⟩ ⟨* /⟩ ⟨*/ ⟩ ⟨*/⟩
1 + ⟨/*⟩ foo ⟨*/⟩ 2
⟨/*⟩
multi
line
comment
⟨*/⟩
--------------------------------------------------------------------------------

(source_file
  (newline)
  (content)
  (content)
)

================================================================================
Plain Line Comments
================================================================================
// comment with ↑ quilt chars ↓
1 + 2
// another comment
--------------------------------------------------------------------------------

(source_file
  (plain_line_comment)
  (newline)
  (content)
  (newline)
  (plain_line_comment)
)

================================================================================
Plain Block Comments
================================================================================
/* block comment with ↑ quilt chars */
code
/* multi
line
block */
--------------------------------------------------------------------------------

(source_file
  (plain_block_comment)
  (newline)
  (content)
  (newline)
  (plain_block_comment)
)

================================================================================
Plain Comment URL Split
================================================================================
let url = "https://example.com";
--------------------------------------------------------------------------------

(source_file
  (content)
  (plain_line_comment)
)

================================================================================
Annotation With A Digit
================================================================================
lean4↖n + 1↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (content)
    (right_quote))
)

================================================================================
Annotation With A Digit, Unquote
================================================================================
lean4↖↙lean4↙x↘↘↗
--------------------------------------------------------------------------------

(source_file
  (quote
    (left_quote)
    (unquote
      (left_unquote)
      (unquote
        (left_unquote)
        (content)
        (right_unquote))
      (right_unquote))
    (right_quote))
)

================================================================================
Digits Alone Are Not An Annotation
================================================================================
x = 42↖1↗
--------------------------------------------------------------------------------

(source_file
  (content)
  (quote
    (left_quote)
    (content)
    (right_quote))
)
